# CNetwork

./: .gitignore  CMakeLists.txt  README.md  makefile  serv_TP1A_info_tcp.c
include/: TCPclient.h  TCPserver.h  TCPutil.h  UDPclient.h  UDPserver.h  UDPutil.h
src/: TCPclient.c  TCPserver.c  TCPutil.c  UDPclient.c  UDPserver.c  UDPutil.c  testTCPclient.c  testTCPserver.c
